# offset-value-coding

./: CMakeLists.txt  Makefile  README.md  sort_order1.py  sort_order2.py
Google_tests/: CMakeLists.txt  DedupTest.cpp  DistinctTest.cpp  ExternalRunTest.cpp  FilterTest.cpp  GroupByTest.cpp  HashDedupTest.cpp  HashDistinctTest.cpp  HashGroupByTest.cpp  InSortDistinctTest.cpp  InSortGroupByTest.cpp  InStreamDistinctTest.cpp  InStreamGroupByTest.cpp  IteratorTest.cpp  SegmentedSortNoRunsTest.cpp  SegmentedSortTest.cpp  SortDistinctTest.cpp  SortTest.cpp  UnSegmentedSortTest.cpp
src/lib/: Aggregates.h  HashSet.cpp  HashSet.h  Partitioner.cpp  Partitioner.h  PriorityQueue.cpp  PriorityQueue.h  PriorityQueue.ipp  Row.cpp  Row.h  Run.h  aggregates.h  comparators.h  defs.h  log.cpp  log.h  utils.cpp  utils.h
src/lib/io/: Buffer.h  BufferManager.cpp  BufferManager.h  ExternalRunR.cpp  ExternalRunR.h  ExternalRunRS.cpp  ExternalRunRS.h  ExternalRunW.cpp  ExternalRunW.h  ExternalRunWS.cpp  ExternalRunWS.h
src/lib/iterators/: ApproximateDuplicateGenerator.h  AssertCorrectOVC.h  AssertCount.h  AssertEqual.cpp  AssertEqual.h  AssertSorted.cpp  AssertSorted.h  AssertSortedUnique.cpp  AssertSortedUnique.h  BinaryIterator.h  Counter.h  Dedup.cpp  Dedup.h  Distinct.cpp  Distinct.h  DuplicateGenerator.h  Filter.cpp  Filter.h  Generator.cpp  Generator.h  GeneratorWithDomains.cpp  GeneratorWithDomains.h  GeneratorZeroPrefix.cpp  GeneratorZeroPrefix.h  GeneratorZeroSuffix.cpp  GeneratorZeroSuffix.h  GroupBy.cpp  GroupBy.h  HashDedup.cpp  HashDedup.h  HashDistinct.cpp  HashDistinct.h  HashGroupBy.cpp  HashGroupBy.h  HashGroupBy.ipp  IGenerator.h  InSortDistinct.h  InSortGroupBy.h  InStreamDistinct.cpp  InStreamDistinct.h  (+45 more)
src/ovc/: main.cpp
src/paper1/: main.cpp
src/paper2/: main.cpp
src/rcat/: main.cpp
src/rcheck/: main.cpp
src/rcount/: main.cpp
src/rgen/: main.cpp
